# cfbfastR-cfb-data

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATASETS.md  DESCRIPTION  README.md
python/: conftest.py  era_experiment.py  pyproject.toml
python/betting/: .gitignore  build_line_odds.py  build_odds_consensus.py  fetch_cfbd_lines.py  write_rds.R
python/cfb_data_build/: README.md  __init__.py  __main__.py  build.py  cli.py  config.py  io.py  pbp.py  publish.py  reshape.py  reshapers.py  team_summaries.py
python/cfb_data_ingest/: README.md  __init__.py  cli.py  fetch.py  participants.py  schedule.py
python/cfb_model_pbp/: build.py  cli.py  schema.py
python/cfb_model_publish/: artifacts.py  builders.py  cli.py
python/cfb_model_reports/: cli.py  discovery.py  figures.py  metrics.py  narratives.py  report.py
python/cpoe/: __init__.py  cli.py  constants.py  features.py  ingest.py  inspect_cfbd_air_yards.py  train_cp.py
python/model_training/: cli.py  constants.py  era_artifacts.py  era_report.py  features.py  figures.py  ingest.py  loso_oof_extra.py  model_card.py  punt_distribution.py  spread_backfill.py  train_fg.py  train_qbr.py  train_two_pt.py  train_xpass.py  validate.py
python/model_training/fourth_down/: cli.py  constants.py  features.py  figures.py  fourth_down_decision.py  validate.py
python/pregame_wp/: __init__.py  box_score.py  cli.py  data_ingest.py  ep_curve.py  five_factors.py  play_features.py  predict.py  talent.py  team_stats.py  training.py
python/rb_eval/: cli.py  features.py  figures.py  train.py
python/tests/: conftest.py
(+164 files in other folders)
