[project]
name = "cfbfastr-cfb-data-models"
version = "0.1.0"
description = "CFB modeling subsystem (EP/WP/QBR, CPOE, fourth-down, RB-eval) + URL-fetch ingest + model-PBP build."
requires-python = ">=3.11"
dependencies = [
    "sportsdataverse>=0.0.69",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=15.0",
    "requests>=2.28",
    "tqdm>=4.66",
    "scikit-learn>=1.0",
    "xgboost>=2.0",
    "scipy>=1.10",
]

[dependency-groups]
dev = ["pytest>=8.0", "joblib>=1.3"]
figures = ["plotnine>=0.13", "statsmodels>=0.14", "pillow>=10.0"]
gam = ["pygam>=0.9"]
pregame-wp = ["scipy>=1.10", "scikit-learn>=1.3"]

[tool.pytest.ini_options]
markers = [
    "integration: whole-corpus or network test requiring fetched/cached JSON or a CFBD key (deselected by default)",
    "live: hits the live ESPN API (gated by CFB_LIVE_TESTS=1)",
]
testpaths = ["tests"]
pythonpath = ["."]
addopts = '-m "not integration"'
